--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,123 +55,6 @@
             <h2>熱銷蔬果箱</h2>
             <div class="pSlider">
                 <div class="pSlide-track">
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_001.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_001.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_004.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top img-fluid" src="img/home_004.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_004.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_004.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_001.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_001.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pSlide">
-                        <div class="card text-center" style="width: 18rem;">
-                            <div class="card-header">
-                                綜合蔬菜箱
-                            </div>
-                            <img class="card-img-top" src="img/home_001.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">內容物</h5>
-                                <p class="card-text">當令蔬菜5份</p>
-                                <a href="#" class="btn btn-vg">前往商品頁面</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -180,132 +63,6 @@
             <h2>顧客回饋</h2>
             <div class="pSlider2">
                 <div class="pSlide2-track">
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
-                    <div class="pSlide2">
-                        <div class="card text-center">
-                            <div class="card-header">
-                              Featured
-                            </div>
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                              2 days ago
-                            </div>
-                          </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -329,6 +86,65 @@
                             btn.innerHTML = "Play";
                         }
                     }
+
+                    fetch('/home/homeProduct')
+                        .then(function (res) {
+                            return res.json();
+                        })
+                        .then(function (jsonObj) {
+                            for (var i = 0; i < jsonObj.length; i++) {
+                                console.log(jsonObj[i].product);
+                                $('#sec4 .pSlide-track').append(`
+                                <div class="pSlide" id="pSlide${i}">
+                                    <div class="card text-center" style="width: 18rem;">
+                                        <div class="card-header">
+                                            ${jsonObj[i].product}
+                                        </div>
+                                        <img class="card-img-top" src="" alt="Card image cap" id="productImg${i}">
+                                        <div class="card-body">
+                                            <h5 class="card-title">內容物</h5>
+                                            <p class="card-text">${jsonObj[i].content}</p>
+                                            <a href="/product" class="btn btn-vg">前往商品頁面</a>
+                                        </div>
+                                    </div>
+                                </div>`);
+                            }
+                            $('#productImg0').prop('src','img/中秋箱.png');
+                            $('#productImg1').prop('src','img/果果箱.png');
+                            $('#productImg2').prop('src','img/盛產箱.png');
+                            $('#productImg3').prop('src','img/自選蔬果箱.png');
+                            $('#productImg4').prop('src','img/菜菜箱.png');
+                            $('#productImg5').prop('src','img/蔬果健康箱.png');
+                            $('#productImg6').prop('src','img/蔬果減脂箱.png');
+                            $('#pSlide3 p.card-text').html('客製化自由選購蔬果');
+                        });
+
+                    fetch('/home/homeRates')
+                    .then(function(res){
+                        return res.json();
+                    })
+                    .then(function(jsonObj){
+                        console.log(jsonObj[0]);
+                        for(var i = 0; i < jsonObj.length; i++){
+                            var commentList = jsonObj[i].comment.split('|');
+                            console.log(commentList);
+                            $('#sec5 .pSlide2-track').append(`
+                            <div class="pSlide2">
+                                <div class="card border-success text-left">
+                                    <div class="card-header">
+                                        ${jsonObj[i].Name}
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h5>
+                                        <p class="card-text">${commentList[1]}</p>
+                                    </div>
+                                    <div class="card-footer text-muted">
+                                        ${Math.floor(Math.random() * 5)} days ago
+                                    </div>
+                                </div>
+                            </div>`)
+                        }
+                    })
                 </script>
 
 </body>
