--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -249,7 +249,7 @@
                 <!-- wrap end-->
 
             </div>
-
+            <%- include('share/footer.ejs')%>
             <script src="js/blogact.js"></script>
             <script src="js/selectivity-jquery.min.js"></script>
             <script>
